--- a/Views/Holidays/Create.cshtml
+++ b/Views/Holidays/Create.cshtml
@@ -42,6 +42,11 @@
                 <span asp-validation-for="PatientNote" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Brand" class="control-label"></label>
+                <input asp-for="Brand" class="form-control" />
+                <span asp-validation-for="Brand" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </form>
