--- a/Views/Holidays/Pending.cshtml
+++ b/Views/Holidays/Pending.cshtml
@@ -33,6 +33,9 @@
             <th>
                 Patient note
             </th>
+            <th>
+                Brand
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -63,6 +66,9 @@
                 </td>
                 <td>
                     @request.PatientNote
+                </td>
+                <td>
+                    @request.Brand
                 </td>
                 <td>
                     @if(!request.IsApproved){
